# iov-vehicle-tbox-framework

./: .gitignore  AGENTS.md  CMakeLists.txt  HWYZ.pc.in  HWYZConfig.cmake.in  README.md  TBoxFramework.pc.in  TBoxFrameworkConfig.cmake.in  debug_test  debug_test.cpp  debug_test2  debug_test2.cpp  debug_test3  debug_test3.cpp  debug_test4  debug_test4.cpp  debug_test5  debug_test5.cpp  test_config_manager  test_config_merger  test_config_validator  test_flush_policy  test_path_resolver  test_serializer
docs/: framework-store-guide.md  framework-usage-guide.md
docs/superpowers/plans/: 2026-07-02-framework-config-management.md
include/: application.h  config.h  config_types.h  log.h  log_types.h  persist_key.h  store.h  store_types.h  utils.h
scripts/: build.sh
src/: application.cpp  utils.cpp
src/config/: config_manager.cpp  config_merger.cpp  config_merger.h  config_validator.cpp  config_validator.h  immutable_config_view.cpp  immutable_config_view.h  path_resolver.cpp  path_resolver.h
src/log/: log_async_dispatcher.cpp  log_async_dispatcher.h  log_config_adapter.cpp  log_config_adapter.h  log_console_sink.cpp  log_console_sink.h  log_emergency_writer.cpp  log_emergency_writer.h  log_enricher.cpp  log_enricher.h  log_json_formatter.cpp  log_json_formatter.h  log_level_filter.cpp  log_level_filter.h  log_logger.cpp  log_redactor.cpp  log_redactor.h  log_rolling_file_sink.cpp  log_rolling_file_sink.h  log_sink_manager.cpp  log_sink_manager.h  log_types.cpp
src/store/: store.cpp  store_atomic_writer.cpp  store_atomic_writer.h  store_file_lock.cpp  store_file_lock.h  store_flush_policy.cpp  store_flush_policy.h  store_path_resolver.cpp  store_path_resolver.h  store_serializer.cpp  store_serializer.h  store_types.h
tests/: test_config_manager.cpp  test_config_merger.cpp  test_config_validator.cpp  test_log_async_dispatcher.cpp  test_log_config_adapter.cpp  test_log_context_scope.cpp  test_log_enricher.cpp  test_log_integration.cpp  test_log_json_formatter.cpp  test_log_level_filter.cpp  test_log_redactor.cpp  test_path_resolver.cpp  test_store_atomic_writer.cpp  test_store_configurable_path.cpp  test_store_file_lock.cpp  test_store_flush_policy.cpp  test_store_integration.cpp  test_store_manager.cpp  test_store_path_resolver.cpp  test_store_serializer.cpp
